# 3dstools

./: .gitignore  Makefile.am
src/: 3dsxtool.cpp  ByteBuffer.h  YamlReader.cpp  YamlReader.h  cia_header.h  ciatool.cpp  crypto.cpp  crypto.h  ctr_app_icon.cpp  cxi_extended_header.cpp  cxi_extended_header.h  cxitool.cpp  default_cxispec.yaml  es_sign.cpp  es_sign.h  es_ticket.cpp  es_ticket.h  es_tmd.cpp  es_tmd.h  exefs.cpp  exefs.h  exefs_code.cpp  exefscode.cpp  exefscode.h  ivfc.cpp  ivfc.h  ncch_header.cpp  ncch_header.h  ncchextendedheader.cpp  ncchextendedheader.h  ncchheader.cpp  ncchheader.h  oschar.cpp  oschar.h  romfs.cpp  romfs.h  romfs2.cpp  romfs2.h  romfsdirscanner.cpp  romfsdirscanner.h  (+3 more)
